# traceroot-claude-code-plugin

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json  traceroot_hook.py
tests/: test_ask_grouping.py  test_debug.py  test_e2e_real_session.py  test_emission_regression.py  test_emit_replay.py  test_fixture_replay.py  test_smoke.py  test_spans.py  test_state.py  test_subagents.py  test_tokens.py  test_transcript.py
tests/fixtures/real-session-428ddacf/: transcript.jsonl
tests/fixtures/real-session-428ddacf/subagents/: agent-ae71f29fe45ac2886.jsonl  agent-ae71f29fe45ac2886.meta.json
tests/fixtures/simple-session/: transcript.jsonl
tests/fixtures/simple-session/subagents/: agent-sub001.jsonl
traceroot_observability/: config.py  debug.py  emit.py  spans.py  state.py  subagents.py  tokens.py  transcript.py
