[project]
name = "traceroot-observability"
version = "0.1.0"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "opentelemetry-api>=1.20",
]

[dependency-groups]
dev = [
    "opentelemetry-sdk>=1.20",
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
